# ShopifyDashboardProduct

./: .gitignore  ALEMBIC_DEBUG_REPORT.md  ALEMBIC_FIX_SUMMARY.md  ARCHITECTURE_CONFUSION_CRITICAL.md  DATABASE_RECOMMENDATION.md  DEPLOYMENT_GUIDE_RENDER.md  DEPLOYMENT_QUICK_START.md  EXECUTION_PLAN_SHOPIFY_EMBEDDED_APP.md  FORENSIC_CODEBASE_ANALYSIS.md  FRONTEND_BACKEND_CONNECTION_PLAN.md  GROWZILLA_DESIGN_PATTERNS.md  INTEGRATION_SUMMARY.md  LOCAL_TESTING_GUIDE.md  OnboardNewStore.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  SHOPIFY_MCP_INTEGRATION_PLAN.md  Start.md  TESTING_STRATEGY.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  Dockerfile.worker  README.md  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_analytics_schema.py  003_align_tables_with_models.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  database.py  logging.py  security.py
backend/app/middleware/: __init__.py  error_handler.py  request_id.py
backend/app/models/: __init__.py  analytics.py  code_analysis.py  insight.py  order.py  product.py  shop.py
backend/app/repositories/: __init__.py  base.py  insight.py  shop.py
backend/app/routers/: __init__.py  analytics.py  code_analysis.py  dashboard.py  health.py  insights.py  shops.py
backend/app/schemas/: __init__.py  dashboard.py  insight.py  shop.py
backend/app/services/: __init__.py  ai_analyzer.py  analytics_service.py  data_sync.py  deepseek_client.py  insight_generator.py  insights_engine.py  job_queue.py  (+3 more)
backend/tests/: conftest.py  test_code_analysis.py  test_health.py  test_services.py  test_shops.py
(+15 files in other folders)
